rename ingredients to additional, add more text, fix spacings

--- a/src/components/organisms/IngredientsSection/ingredients-section.scss
+++ b/src/components/organisms/IngredientsSection/ingredients-section.scss
@@ -2,10 +2,18 @@
   margin-top: 2rem;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1.5rem;
+
+  &__group {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 
   &__list {
-
+    display: flex;
+    flex-direction: column;
+    gap: .5rem
   }
 
   &__list-item {
